--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 <div class="social-links">
                     <a href="https://github.com/MdAminourIslam" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/md-aminour-islam-9ba7052b2/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://www.facebook.com/md.aminourislam.90" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <!-- <a href="https://www.facebook.com/md.aminourislam.90" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a> -->
                 </div>
             </div>
             <button class="hamburger" id="hamburger-menu" aria-label="Toggle Navigation">
@@ -500,7 +500,7 @@
                             <div class="contact-socials">
                                 <a href="https://github.com/MdAminourIslam" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                                 <a href="https://www.linkedin.com/in/md-aminour-islam-9ba7052b2/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                                <a href="https://www.facebook.com/md.aminourislam.90" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                                <!-- <a href="https://www.facebook.com/md.aminourislam.90" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a> -->
                             </div>
                         </div>
                     </div>
